fixed menu alignment

--- a/client/styles/style.styl
+++ b/client/styles/style.styl
@@ -222,7 +222,7 @@ input {
     overflow: hidden;
     font-size: 14px;
     font-weight: 500;
-    vertical-align: -4px;
+    vertical-align: middle;
   }
 
   &:hover {
